--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
-                        <a target="_blank" href="https://pump.fun/" class="header__button button">
+                        <a target="_blank" href="EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                            class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
                         </a>
@@ -91,7 +92,8 @@
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
-                        <a target="_blank" href="https://pump.fun/" class="hero__button button button--large">
+                        <a target="_blank" href="EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                            class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
                         </a>
@@ -259,7 +261,8 @@
                                     <img src="fonts/telegram.svg" alt="Telegram Logo">
                                 </a>
                             </div>
-                            <a target="_blank" href="https://pump.fun/" class="join__button button button--large">
+                            <a target="_blank" href="EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                                class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
                             </a>
