--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
-                        <a target="_blank" href="EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                        <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
                             class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -92,7 +92,7 @@
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
-                        <a target="_blank" href="EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                        <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -261,7 +261,7 @@
                                     <img src="fonts/telegram.svg" alt="Telegram Logo">
                                 </a>
                             </div>
-                            <a target="_blank" href="EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                            <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
