--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                             <a target="_blank" href="https://dexscreener.com/" class="hero__social-item">
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="" class="hero__social-item">
+                            <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                                class="hero__social-item">
                                 <img src="images/logo.webp" alt="X Logo">
                             </a>
                             <!-- <a target="_blank" href="https://etherscan.org/" class="hero__social-item">
@@ -279,7 +280,8 @@
                         <a target="_blank" href="https://dexscreener.com/" class="footer__social-item">
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
-                        <a target="_blank" href="" class="footer__social-item">
+                        <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                            class="footer__social-item">
                             <img src="images/logo.webp" alt="X Logo">
                         </a>
 
