--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>GINNAN ON SOL</title>
+    <title>GINNAN ON SUI</title>
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <style>
@@ -58,8 +58,7 @@
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
-                        <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
-                            class="header__button button">
+                        <a target="_blank" href="https://movepump.com/token/TBA" class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
                         </a>
@@ -79,9 +78,8 @@
                             <a target="_blank" href="https://dexscreener.com/" class="hero__social-item">
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
-                                class="hero__social-item">
-                                <img src="images/logo.webp" alt="X Logo">
+                            <a target="_blank" href="https://movepump.com/token/TBA" class="hero__social-item">
+                                <img src="images/bluemove.webp" alt="X Logo">
                             </a>
                             <!-- <a target="_blank" href="https://etherscan.org/" class="hero__social-item">
                                     <img src="img/ETH.svg" alt="X Logo" />-->
@@ -93,7 +91,7 @@
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
-                        <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                        <a target="_blank" href="https://movepump.com/token/TBA"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -148,32 +146,32 @@
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
                                         <span>Set up a crypto wallet on the
-                                            SOL network</span>
+                                            SUI network</span>
                                         <span>1</span>
                                     </p>
                                     <p>
-                                        You can use Trust wallet Wallet or Metamask, these are the two we recommend.
+                                        You can use Sui Wallet or Maritan wallet, these are the two we recommend.
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Deposit SOL
+                                        <span>Deposit SUI
                                         </span>
                                         <span>2</span>
                                     </p>
                                     <p>
-                                        Visit https://pump.fun, connect your wallet, and select the amount of SOL you
+                                        Visit MovePump, connect your wallet, and select the amount of SUI you
                                         want to
-                                        trade. Ensure to keep enough SOL for gas fees.
+                                        trade. Ensure to keep enough SUI for gas fees.
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Swap SOL for $GINNAN</span>
+                                        <span>Swap SUI for $GINNAN</span>
                                         <span>3</span>
                                     </p>
                                     <p>
-                                        Head over to https://pump.fun
+                                        Head over to MovePump
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
@@ -221,7 +219,7 @@
                                 </div>
                                 <div class="tokenomics__item">
                                     <span>TOTAL Supply </span>
-                                    <span>1,000,000,000</span>
+                                    <span>10,000,000,000</span>
                                 </div>
                             </div>
                             <div class="tokenomics__ca">
@@ -251,7 +249,7 @@
                         </h2>
                         <p class="join__text" data-watch-threshold="0.9" data-watch-once data-watch>
                             Join the Revolution and discover how GINNANis changing the world of cryptocurrency on the
-                            SOL chain. Follow GINNAN's journey and be enchanted by his sweetness and indomitable spirit.
+                            SUI chain. Follow GINNAN's journey and be enchanted by his sweetness and indomitable spirit.
                         </p>
                         <div class="join__actions" data-watch-threshold="0.9" data-watch-once data-watch>
                             <div class="join__social">
@@ -262,7 +260,7 @@
                                     <img src="fonts/telegram.svg" alt="Telegram Logo">
                                 </a>
                             </div>
-                            <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
+                            <a target="_blank" href="https://movepump.com/token/TBA"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
@@ -280,9 +278,8 @@
                         <a target="_blank" href="https://dexscreener.com/" class="footer__social-item">
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
-                        <a target="_blank" href="https://pump.fun/coin/EYNp52AtWmt9Br6rNvDoaZHDF7dZsBFoT1QbkjM1pump"
-                            class="footer__social-item">
-                            <img src="images/logo.webp" alt="X Logo">
+                        <a target="_blank" href="https://movepump.com/token/TBA" class="footer__social-item">
+                            <img src="images/bluemove.webp" alt="X Logo">
                         </a>
 
 
