--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
-                        <a target="_blank" href="https://movepump.com/token/TBA" class="header__button button">
+                        <a target="_blank"
+                            href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
+                            class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
                         </a>
@@ -78,7 +80,9 @@
                             <a target="_blank" href="https://dexscreener.com/" class="hero__social-item">
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://movepump.com/token/TBA" class="hero__social-item">
+                            <a target="_blank"
+                                href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
+                                class="hero__social-item">
                                 <img src="images/bluemove.webp" alt="X Logo">
                             </a>
                             <!-- <a target="_blank" href="https://etherscan.org/" class="hero__social-item">
@@ -91,7 +95,8 @@
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
-                        <a target="_blank" href="https://movepump.com/token/TBA"
+                        <a target="_blank"
+                            href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -225,7 +230,7 @@
                             <div class="tokenomics__ca">
                                 <p>Contract</p>
                                 <p>
-                                    <span>TBA</span>
+                                    <span>0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN</span>
                                     <button class="copy-ca-btn">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                                             viewBox="0 0 40 40" fill="none">
@@ -260,7 +265,8 @@
                                     <img src="fonts/telegram.svg" alt="Telegram Logo">
                                 </a>
                             </div>
-                            <a target="_blank" href="https://movepump.com/token/TBA"
+                            <a target="_blank"
+                                href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
@@ -278,7 +284,9 @@
                         <a target="_blank" href="https://dexscreener.com/" class="footer__social-item">
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
-                        <a target="_blank" href="https://movepump.com/token/TBA" class="footer__social-item">
+                        <a target="_blank"
+                            href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
+                            class="footer__social-item">
                             <img src="images/bluemove.webp" alt="X Logo">
                         </a>
 
