--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>GINNAN ON SUI</title>
+    <title>GINNAN ON PULSE</title>
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <style>
@@ -51,15 +51,15 @@
                     </div>
                     <div class="header__actions" data-da=".menu__body, 991.98">
                         <div class="header__social">
-                            <a target="_blank" href="https://x.com/GinnanOG_" class="header__social-item">
+                            <a target="_blank" href="https://x.com/Ginnan_Pulse" class="header__social-item">
                                 <img src="fonts/x.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://t.me/OGGinnan_Portal" class="header__social-item">
+                            <a target="_blank" href="https://t.me/Ginnan_Pulse" class="header__social-item">
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
+                            href="https://pump.tires/token/TBA"
                             class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -81,22 +81,22 @@
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
                             <a target="_blank"
-                                href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
+                                href="https://pump.tires/token/TBA"
                                 class="hero__social-item">
-                                <img src="images/bluemove.webp" alt="X Logo">
+                                <img src="images/pump.png" alt="X Logo">
                             </a>
                             <!-- <a target="_blank" href="https://etherscan.org/" class="hero__social-item">
                                     <img src="img/ETH.svg" alt="X Logo" />-->
 
-                            <a target="_blank" href=" https://x.com/GinnanOG_" class="hero__social-item">
+                            <a target="_blank" href=" https://x.com/Ginnan_Pulse" class="hero__social-item">
                                 <img src="fonts/x.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://t.me/OGGinnan_Portal" class="hero__social-item">
+                            <a target="_blank" href="https://t.me/Ginnan_Pulse" class="hero__social-item">
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
+                            href="https://pump.tires/token/TBA"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -151,32 +151,32 @@
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
                                         <span>Set up a crypto wallet on the
-                                            SUI network</span>
+                                            PULSE network</span>
                                         <span>1</span>
                                     </p>
                                     <p>
-                                        You can use Sui Wallet or Maritan wallet, these are the two we recommend.
+                                        You can use PLS Wallet or Metamask wallet, these are the two we recommend.
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Deposit SUI
+                                        <span>Deposit PLS
                                         </span>
                                         <span>2</span>
                                     </p>
                                     <p>
-                                        Visit MovePump, connect your wallet, and select the amount of SUI you
+                                        Visit pump.tires, connect your wallet, and select the amount of PLS you
                                         want to
-                                        trade. Ensure to keep enough SUI for gas fees.
+                                        trade. Ensure to keep enough PLS for gas fees.
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Swap SUI for $GINNAN</span>
+                                        <span>Swap PLS for $GINNAN</span>
                                         <span>3</span>
                                     </p>
                                     <p>
-                                        Head over to MovePump
+                                        Head over to pump.tire
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
@@ -224,13 +224,13 @@
                                 </div>
                                 <div class="tokenomics__item">
                                     <span>TOTAL Supply </span>
-                                    <span>10,000,000,000</span>
+                                    <span>1,000,000,000</span>
                                 </div>
                             </div>
                             <div class="tokenomics__ca">
                                 <p>Contract</p>
                                 <p>
-                                    <span>0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN</span>
+                                    <span>TBA</span>
                                     <button class="copy-ca-btn">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                                             viewBox="0 0 40 40" fill="none">
@@ -254,19 +254,19 @@
                         </h2>
                         <p class="join__text" data-watch-threshold="0.9" data-watch-once data-watch>
                             Join the Revolution and discover how GINNANis changing the world of cryptocurrency on the
-                            SUI chain. Follow GINNAN's journey and be enchanted by his sweetness and indomitable spirit.
+                            PULSE chain. Follow GINNAN's journey and be enchanted by his sweetness and indomitable spirit.
                         </p>
                         <div class="join__actions" data-watch-threshold="0.9" data-watch-once data-watch>
                             <div class="join__social">
-                                <a target="_blank" href="https://x.com/GinnanOG_" class="join__social-item">
+                                <a target="_blank" href="https://x.com/Ginnan_Pulse" class="join__social-item">
                                     <img src="fonts/x.svg" alt="X Logo">
                                 </a>
-                                <a target="_blank" href="https://t.me/OGGinnan_Portal" class="join__social-item">
+                                <a target="_blank" href="https://t.me/Ginnan_Pulse" class="join__social-item">
                                     <img src="fonts/telegram.svg" alt="Telegram Logo">
                                 </a>
                             </div>
                             <a target="_blank"
-                                href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
+                                href="https://pump.tires/token/TBA"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
@@ -285,16 +285,16 @@
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
                         <a target="_blank"
-                            href="https://movepump.com/token/0x568063198a11f17c51fa5504ae74d0baf4cb4b34eb332f2f1b0959ebb74ff612::ginnan::GINNAN"
+                            href="https://pump.tires/token/TBA"
                             class="footer__social-item">
-                            <img src="images/bluemove.webp" alt="X Logo">
+                            <img src="images/pump.png" alt="X Logo">
                         </a>
 
 
-                        <a target="_blank" href="https://x.com/GinnanOG_" class="footer__social-item">
+                        <a target="_blank" href="https://x.com/Ginnan_Pulse" class="footer__social-item">
                             <img src="fonts/x.svg" alt="X Logo">
                         </a>
-                        <a target="_blank" href="https://t.me/OGGinnan_Portal" class="footer__social-item">
+                        <a target="_blank" href="https://t.me/Ginnan_Pulse" class="footer__social-item">
                             <img src="fonts/telegram.svg" alt="Telegram Logo">
                         </a>
                     </div>
