--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://pump.tires/token/TBA"
+                            href="https://pump.tires/token/0x237A26c38da41d01C8146ED868b47574A388e568"
                             class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -81,7 +81,7 @@
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
                             <a target="_blank"
-                                href="https://pump.tires/token/TBA"
+                                href="https://pump.tires/token/0x237A26c38da41d01C8146ED868b47574A388e568"
                                 class="hero__social-item">
                                 <img src="images/pump.png" alt="X Logo">
                             </a>
@@ -96,7 +96,7 @@
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://pump.tires/token/TBA"
+                            href="https://pump.tires/token/0x237A26c38da41d01C8146ED868b47574A388e568"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -230,7 +230,7 @@
                             <div class="tokenomics__ca">
                                 <p>Contract</p>
                                 <p>
-                                    <span>TBA</span>
+                                    <span>0x237A26c38da41d01C8146ED868b47574A388e568</span>
                                     <button class="copy-ca-btn">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                                             viewBox="0 0 40 40" fill="none">
@@ -266,7 +266,7 @@
                                 </a>
                             </div>
                             <a target="_blank"
-                                href="https://pump.tires/token/TBA"
+                                href="https://pump.tires/token/0x237A26c38da41d01C8146ED868b47574A388e568"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
@@ -285,7 +285,7 @@
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
                         <a target="_blank"
-                            href="https://pump.tires/token/TBA"
+                            href="https://pump.tires/token/0x237A26c38da41d01C8146ED868b47574A388e568"
                             class="footer__social-item">
                             <img src="images/pump.png" alt="X Logo">
                         </a>
