--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <div class="hero__container">
                     <h1 class="hero__title"><span>GINNAN</span></h1>
                     <h1 class="hero__text">The very first Deployed <br>Join the OG Revolution!</h1>
+                    <h1 class="hero__text">CA: 0x237A26c38da41d01C8146ED868b47574A388e568</h1>
                     <br>
                     <div class="hero__actions">
                         <div class="hero__social">
