--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://pump.tires/token/SOON"
+                            href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
                             class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -74,7 +74,7 @@
                 <div class="hero__container">
                     <h1 class="hero__title"><span>GINNAN</span></h1>
                     <h1 class="hero__text">The very first Deployed <br>Join the OG Revolution!</h1>
-                    <h1 class="hero__text">CA: SOON</h1>
+                    <h1 class="hero__text">CA: 0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3</h1>
                     <br>
                     <div class="hero__actions">
                         <div class="hero__social">
@@ -82,7 +82,7 @@
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
                             <a target="_blank"
-                                href="https://pump.tires/token/SOON"
+                                href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
                                 class="hero__social-item">
                                 <img src="images/pump.png" alt="X Logo">
                             </a>
@@ -97,7 +97,7 @@
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://pump.tires/token/SOON"
+                            href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -231,7 +231,7 @@
                             <div class="tokenomics__ca">
                                 <p>Contract</p>
                                 <p>
-                                    <span>SOON</span>
+                                    <span>0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3</span>
                                     <button class="copy-ca-btn">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                                             viewBox="0 0 40 40" fill="none">
@@ -267,7 +267,7 @@
                                 </a>
                             </div>
                             <a target="_blank"
-                                href="https://pump.tires/token/SOON"
+                                href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
@@ -286,7 +286,7 @@
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
                         <a target="_blank"
-                            href="https://pump.tires/token/SOON"
+                            href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
                             class="footer__social-item">
                             <img src="images/pump.png" alt="X Logo">
                         </a>
