--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>GINNAN ON PULSE</title>
+    <title>GINNAN ON Story</title>
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <style>
@@ -15,6 +15,12 @@
         .loaded body {
             opacity: 1;
             visibility: visible;
+        }
+        .hero__social-item:nth-child(2){
+            background-color: brown !important;
+        }
+        .footer__social-item:nth-child(2){
+               background-color: brown !important;
         }
     </style>
     <link rel="stylesheet" href="css/style.min5dec.css">
@@ -51,15 +57,15 @@
                     </div>
                     <div class="header__actions" data-da=".menu__body, 991.98">
                         <div class="header__social">
-                            <a target="_blank" href="https://x.com/Ginnan_Pulse" class="header__social-item">
+                            <a target="_blank" href="https://x.com/Ginnan_Story" class="header__social-item">
                                 <img src="fonts/x.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://t.me/Ginnan_Pulse" class="header__social-item">
+                            <a target="_blank" href="https://t.me/Ginnan_Story" class="header__social-item">
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
+                            href="https://ip.world/token/TBA"
                             class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -74,7 +80,7 @@
                 <div class="hero__container">
                     <h1 class="hero__title"><span>GINNAN</span></h1>
                     <h1 class="hero__text">The very first Deployed <br>Join the OG Revolution!</h1>
-                    <h1 class="hero__text">CA: 0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3</h1>
+                    <h1 class="hero__text">CA: TBA</h1>
                     <br>
                     <div class="hero__actions">
                         <div class="hero__social">
@@ -82,22 +88,22 @@
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
                             <a target="_blank"
-                                href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
+                                href="https://ip.world/token/TBA"
                                 class="hero__social-item">
-                                <img src="images/pump.png" alt="X Logo">
+                                <img src="images/logo.svg" alt="X Logo">
                             </a>
                             <!-- <a target="_blank" href="https://etherscan.org/" class="hero__social-item">
                                     <img src="img/ETH.svg" alt="X Logo" />-->
 
-                            <a target="_blank" href=" https://x.com/Ginnan_Pulse" class="hero__social-item">
+                            <a target="_blank" href=" https://x.com/Ginnan_Story" class="hero__social-item">
                                 <img src="fonts/x.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://t.me/Ginnan_Pulse" class="hero__social-item">
+                            <a target="_blank" href="https://t.me/Ginnan_Story" class="hero__social-item">
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
+                            href="https://ip.world/token/TBA"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -132,7 +138,7 @@
                         </div>
                         <div class="about__text" data-watch-threshold="1" data-watch-once data-watch>
                             $GINNAN is ready to take over as the baddest cat… Roaring Kitty thinks so.. Come Join a
-                            BASED community!
+                            Story community!
                         </div>
                     </div>
                 </div>
@@ -152,32 +158,32 @@
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
                                         <span>Set up a crypto wallet on the
-                                            PULSE network</span>
+                                            Story network</span>
                                         <span>1</span>
                                     </p>
                                     <p>
-                                        You can use PLS Wallet or Metamask wallet, these are the two we recommend.
+                                        You can use IP Wallet or Metamask wallet, these are the two we recommend.
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Deposit PLS
+                                        <span>Deposit IP
                                         </span>
                                         <span>2</span>
                                     </p>
                                     <p>
-                                        Visit pump.tires, connect your wallet, and select the amount of PLS you
+                                        Visit ip.world, connect your wallet, and select the amount of IP you
                                         want to
-                                        trade. Ensure to keep enough PLS for gas fees.
+                                        trade. Ensure to keep enough IP for gas fees.
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Swap PLS for $GINNAN</span>
+                                        <span>Swap IP for $GINNAN</span>
                                         <span>3</span>
                                     </p>
                                     <p>
-                                        Head over to pump.tire
+                                        Head over to ip.world
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
@@ -231,7 +237,7 @@
                             <div class="tokenomics__ca">
                                 <p>Contract</p>
                                 <p>
-                                    <span>0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3</span>
+                                    <span>TBA</span>
                                     <button class="copy-ca-btn">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                                             viewBox="0 0 40 40" fill="none">
@@ -255,19 +261,19 @@
                         </h2>
                         <p class="join__text" data-watch-threshold="0.9" data-watch-once data-watch>
                             Join the Revolution and discover how GINNANis changing the world of cryptocurrency on the
-                            PULSE chain. Follow GINNAN's journey and be enchanted by his sweetness and indomitable spirit.
+                            Story chain. Follow GINNAN's journey and be enchanted by his sweetness and indomitable spirit.
                         </p>
                         <div class="join__actions" data-watch-threshold="0.9" data-watch-once data-watch>
                             <div class="join__social">
-                                <a target="_blank" href="https://x.com/Ginnan_Pulse" class="join__social-item">
+                                <a target="_blank" href="https://x.com/Ginnan_Story" class="join__social-item">
                                     <img src="fonts/x.svg" alt="X Logo">
                                 </a>
-                                <a target="_blank" href="https://t.me/Ginnan_Pulse" class="join__social-item">
+                                <a target="_blank" href="https://t.me/Ginnan_Story" class="join__social-item">
                                     <img src="fonts/telegram.svg" alt="Telegram Logo">
                                 </a>
                             </div>
                             <a target="_blank"
-                                href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
+                                href="https://ip.world/token/TBA"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
@@ -286,16 +292,16 @@
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
                         <a target="_blank"
-                            href="https://pump.tires/token/0x39dDBF2d1Cbec9fd0f79cEaA01a18F78EF4A2Cd3"
+                            href="https://ip.world/token/TBA"
                             class="footer__social-item">
-                            <img src="images/pump.png" alt="X Logo">
+                            <img src="images/logo.svg" alt="X Logo">
                         </a>
 
 
-                        <a target="_blank" href="https://x.com/Ginnan_Pulse" class="footer__social-item">
+                        <a target="_blank" href="https://x.com/Ginnan_Story" class="footer__social-item">
                             <img src="fonts/x.svg" alt="X Logo">
                         </a>
-                        <a target="_blank" href="https://t.me/Ginnan_Pulse" class="footer__social-item">
+                        <a target="_blank" href="https://t.me/Ginnan_Story" class="footer__social-item">
                             <img src="fonts/telegram.svg" alt="Telegram Logo">
                         </a>
                     </div>
