--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <a target="_blank" href="https://x.com/Ginnan_Story" class="header__social-item">
                                 <img src="fonts/x.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://t.me/Ginnan_Story" class="header__social-item">
+                            <a target="_blank" href="https://t.me/GinnanStory_Channel" class="header__social-item">
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
@@ -98,7 +98,7 @@
                             <a target="_blank" href=" https://x.com/Ginnan_Story" class="hero__social-item">
                                 <img src="fonts/x.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://t.me/Ginnan_Story" class="hero__social-item">
+                            <a target="_blank" href="https://t.me/GinnanStory_Channel" class="hero__social-item">
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
@@ -268,7 +268,7 @@
                                 <a target="_blank" href="https://x.com/Ginnan_Story" class="join__social-item">
                                     <img src="fonts/x.svg" alt="X Logo">
                                 </a>
-                                <a target="_blank" href="https://t.me/Ginnan_Story" class="join__social-item">
+                                <a target="_blank" href="https://t.me/GinnanStory_Channel" class="join__social-item">
                                     <img src="fonts/telegram.svg" alt="Telegram Logo">
                                 </a>
                             </div>
@@ -301,7 +301,7 @@
                         <a target="_blank" href="https://x.com/Ginnan_Story" class="footer__social-item">
                             <img src="fonts/x.svg" alt="X Logo">
                         </a>
-                        <a target="_blank" href="https://t.me/Ginnan_Story" class="footer__social-item">
+                        <a target="_blank" href="https://t.me/GinnanStory_Channel" class="footer__social-item">
                             <img src="fonts/telegram.svg" alt="Telegram Logo">
                         </a>
                     </div>
