--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>GINNAN ON Story</title>
+    <title>XGINNAN ON X LAYER</title>
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <style>
@@ -57,15 +57,15 @@
                     </div>
                     <div class="header__actions" data-da=".menu__body, 991.98">
                         <div class="header__social">
-                            <a target="_blank" href="https://x.com/Ginnan_Story" class="header__social-item">
+                            <a target="_blank" href="https://x.com/Ginnan_OKX" class="header__social-item">
                                 <img src="fonts/x.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://t.me/GinnanStory_Channel" class="header__social-item">
+                            <a target="_blank" href="https://t.me/Ginnan_OKX" class="header__social-item">
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://ip.world/token/TBA"
+                            href="https://dyorswap.org/home/?chainId=196"
                             class="header__button button">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -78,7 +78,7 @@
         <main class="page">
             <section class="page__hero hero">
                 <div class="hero__container">
-                    <h1 class="hero__title"><span>GINNAN</span></h1>
+                    <h1 class="hero__title"><span>XGINNAN</span></h1>
                     <h1 class="hero__text">The very first Deployed <br>Join the OG Revolution!</h1>
                     <h1 class="hero__text">CA: TBA</h1>
                     <br>
@@ -88,22 +88,22 @@
                                 <img src="fonts/dex.svg" alt="X Logo">
                             </a>
                             <a target="_blank"
-                                href="https://ip.world/token/TBA"
+                                href="https://dyorswap.org/home/?chainId=196"
                                 class="hero__social-item">
-                                <img src="images/logo.svg" alt="X Logo">
+                                <img src="images/favicon.ico" alt="X Logo">
                             </a>
                             <!-- <a target="_blank" href="https://etherscan.org/" class="hero__social-item">
                                     <img src="img/ETH.svg" alt="X Logo" />-->
 
-                            <a target="_blank" href=" https://x.com/Ginnan_Story" class="hero__social-item">
+                            <a target="_blank" href=" https://x.com/Ginnan_OKX" class="hero__social-item">
                                 <img src="fonts/x.svg" alt="X Logo">
                             </a>
-                            <a target="_blank" href="https://t.me/GinnanStory_Channel" class="hero__social-item">
+                            <a target="_blank" href="https://t.me/Ginnan_OKX" class="hero__social-item">
                                 <img src="fonts/telegram.svg" alt="Telegram Logo">
                             </a>
                         </div>
                         <a target="_blank"
-                            href="https://ip.world/token/TBA"
+                            href="https://dyorswap.org/home/?chainId=196"
                             class="hero__button button button--large">
                             <span>BUy now</span>
                             <span>BUy now</span>
@@ -137,8 +137,8 @@
                             </div>
                         </div>
                         <div class="about__text" data-watch-threshold="1" data-watch-once data-watch>
-                            $GINNAN is ready to take over as the baddest cat… Roaring Kitty thinks so.. Come Join a
-                            Story community!
+                            $XGINNAN is ready to take over as the baddest cat… Roaring Kitty thinks so.. Come Join a
+                            X LAYER community!
                         </div>
                     </div>
                 </div>
@@ -158,28 +158,28 @@
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
                                         <span>Set up a crypto wallet on the
-                                            Story network</span>
+                                            X LAYER network</span>
                                         <span>1</span>
                                     </p>
                                     <p>
-                                        You can use IP Wallet or Metamask wallet, these are the two we recommend.
+                                        You can use OKX Wallet or Metamask wallet, these are the two we recommend.
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Deposit IP
+                                        <span>Deposit OKX
                                         </span>
                                         <span>2</span>
                                     </p>
                                     <p>
-                                        Visit ip.world, connect your wallet, and select the amount of IP you
+                                        Visit ip.world, connect your wallet, and select the amount of OKX you
                                         want to
-                                        trade. Ensure to keep enough IP for gas fees.
+                                        trade. Ensure to keep enough OKX for gas fees.
                                     </p>
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Swap IP for $GINNAN</span>
+                                        <span>Swap OKX for $XGINNAN</span>
                                         <span>3</span>
                                     </p>
                                     <p>
@@ -188,12 +188,12 @@
                                 </li>
                                 <li class="body-box__item" data-watch-threshold="0.9" data-watch-once data-watch>
                                     <p>
-                                        <span>Congrats, you're a GINNAN</span>
+                                        <span>Congrats, you're a XGINNAN</span>
                                         <span>4</span>
                                     </p>
                                     <p>
                                         Now all you have to do is add the contract address to your Wallet for your
-                                        GINNANtokens to show. Welcome aboard!
+                                        XGINNANtokens to show. Welcome aboard!
                                     </p>
                                 </li>
                             </ul>
@@ -260,20 +260,20 @@
                             <span>Join</span><span>Us</span>
                         </h2>
                         <p class="join__text" data-watch-threshold="0.9" data-watch-once data-watch>
-                            Join the Revolution and discover how GINNANis changing the world of cryptocurrency on the
-                            Story chain. Follow GINNAN's journey and be enchanted by his sweetness and indomitable spirit.
+                            Join the Revolution and discover how XGINNANis changing the world of cryptocurrency on the
+                            X LAYER chain. Follow XGINNAN's journey and be enchanted by his sweetness and indomitable spirit.
                         </p>
                         <div class="join__actions" data-watch-threshold="0.9" data-watch-once data-watch>
                             <div class="join__social">
-                                <a target="_blank" href="https://x.com/Ginnan_Story" class="join__social-item">
+                                <a target="_blank" href="https://x.com/Ginnan_OKX" class="join__social-item">
                                     <img src="fonts/x.svg" alt="X Logo">
                                 </a>
-                                <a target="_blank" href="https://t.me/GinnanStory_Channel" class="join__social-item">
+                                <a target="_blank" href="https://t.me/Ginnan_OKX" class="join__social-item">
                                     <img src="fonts/telegram.svg" alt="Telegram Logo">
                                 </a>
                             </div>
                             <a target="_blank"
-                                href="https://ip.world/token/TBA"
+                                href="https://dyorswap.org/home/?chainId=196"
                                 class="join__button button button--large">
                                 <span>Buy now</span>
                                 <span>Buy now</span>
@@ -292,16 +292,16 @@
                             <img src="fonts/dex.svg" alt="X Logo">
                         </a>
                         <a target="_blank"
-                            href="https://ip.world/token/TBA"
+                            href="https://dyorswap.org/home/?chainId=196"
                             class="footer__social-item">
-                            <img src="images/logo.svg" alt="X Logo">
+                            <img src="images/favicon.ico" alt="X Logo">
                         </a>
 
 
-                        <a target="_blank" href="https://x.com/Ginnan_Story" class="footer__social-item">
+                        <a target="_blank" href="https://x.com/Ginnan_OKX" class="footer__social-item">
                             <img src="fonts/x.svg" alt="X Logo">
                         </a>
-                        <a target="_blank" href="https://t.me/GinnanStory_Channel" class="footer__social-item">
+                        <a target="_blank" href="https://t.me/Ginnan_OKX" class="footer__social-item">
                             <img src="fonts/telegram.svg" alt="Telegram Logo">
                         </a>
                     </div>
